--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -92,10 +92,69 @@ body{
     font-size: 15px;
     font-weight: bolder;
     margin: 15px;
+    border: none;
 }
 .btn>a{
     color: #fafafa;
 }
 .btn>a:hover{
     color: #000;
+}
+
+/* about secton styling*/
+
+.container{
+    display: flex;
+    margin: 50px;
+    margin-top: 150px;
+}
+#about-title{
+    color: #2549D3;
+    font-size: 25px;
+}
+#why-us{
+    color: #2549D3;
+    font-size: 25px;
+}
+.btn-2{
+    padding-left: 70px;
+    padding-right: 70px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    background-color: orangered;
+    border-radius: 10px;
+    font-weight: bolder;
+    margin: 15px;
+    font-size: 20px;
+    border: none;
+}
+.btn-2>a{
+    color: #fafafa;
+    font-size: 20px;
+}
+.btn-2>a:hover{
+    color: #000;
+}
+.about-list{
+    list-style: none;
+}
+.about-item{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+    margin-bottom: 15px;
+}
+.about-item-icon {
+    color: orangered;
+    height: 45px;
+    min-width: 45px;
+    border-radius: 50%;
+    display: grid;
+    place-items: left;
+}
+.about-item-text {
+    font-size: 16px;
+    padding-left: 0;
+    margin-left: 0;
 }
