--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -215,3 +215,33 @@ body{
 .service-list-item>a:hover{
     color: #000;
 }
+
+/* property secton styling*/
+.property{
+    background-color: #FAFAFA;
+    height: 60rem;
+    margin: 30px;
+    margin-top: 60px;
+    border-radius: 10px;
+}
+.property-list-subheading{
+    color: orangered;
+    text-align: center;
+    font-size: 20px;
+    border-radius: 20px;
+    padding: 15px;
+}
+.property-list-heading{
+    font-size: 35px;
+    font-weight: 1000;
+    text-align: center;
+    color: #2549D3;
+}
+.property-list{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 30px;
+    list-style: none;
+    margin: 30px;
+}
