modify page margin

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,23 @@
+/* For desktop: */
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+[class*="col-"] {
+    width: 100%;
+}
+}
 /* header top bar styling */
 .header-top{
     background-color: #2549D3;
@@ -33,11 +53,10 @@
 
 /* navigation links styling */
 *{
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Space Grotesk';
-    max-width: 100%;
 }
 a { 
     text-decoration: none;
@@ -49,8 +68,6 @@ a {
 body{
     background-color: #FAFAFA;
     max-width: 100%;
-    max-width: 100rem;
-
 }
 #logo{
     display: flex;
@@ -106,6 +123,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     height: 40rem;
+    margin-left: 20px;
 }
 .intro{
     padding: 100px;
@@ -320,6 +338,8 @@ body{
     margin-top: 20px;
     border-radius: 10px;
     height: 30rem;
+    padding-left: 100px;
+    padding-right: 50px;
 }
 .footer-container{
     padding-top: 40px;
@@ -375,4 +395,10 @@ body{
     background-color: #ddd;
     padding: 40px;
     text-align: center;
+}
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    margin: 0, auto;
 }
