--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -128,7 +128,7 @@ body{
     background-image: url('/assets/images/Altani\ background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 40rem;
+    height: 50rem;
     margin-left: 20px;
 }
 .intro{
@@ -167,7 +167,7 @@ body{
     margin: 50px;
     margin-top: 150px;
 }
-#about-title{
+.about-title{
     color: #2549D3;
     font-size: 25px;
 }
