--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -408,3 +408,30 @@ body{
     width: 100%;
     margin: 0, auto;
 }
+
+/* make inquiry secton styling*/
+.make-inquiry-form{
+    height: 30rem;
+    margin-left: 30rem;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+}
+input{
+    border: none;
+    border-bottom: 1px dotted;
+    color: #000;
+    padding-top: 20px;
+    line-height: 20px;
+    margin: 5px;
+    padding-right: 100px;
+}
+textarea{
+    margin-top: 5px;
+
+}
+.submit-button{
+    color: #FAFAFA;
+    cursor: pointer;
+    
+}
