update background image

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -125,7 +125,7 @@ body{
 
 /* heros secton styling */
 .heros{
-    background-image: url('/assets/images/Altani\ background.jpg');
+    background-image: url('/assets/images/Altani background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 50rem;
