--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -125,9 +125,10 @@ body{
 
 /* heros secton styling */
 .heros{
-    background-image: url('/assets/images/Altani background.jpg');
+    background-image: url('/assets/images/background.jpg');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
+    background-position: center;
     height: 50rem;
     margin-left: 20px;
 }
