--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -125,7 +125,7 @@ body{
 
 /* heros secton styling */
 .heros{
-    background-image: url('/assets/images/background.jpg');
+    background-image: url('/assets/images/img3.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-position: center;
