update background image

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -125,7 +125,7 @@ body{
 
 /* heros secton styling */
 .heros{
-    background-image: url('/assets/images/francesca-tosolini-tHkJAMcO3QE-unsplash\ \(1\).jpg');
+    background-image: url('https://propertylistings.co.ke/wp-content/uploads/2019/01/real-estate-photography.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-position: center;
