update background image

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -125,7 +125,7 @@ body{
 
 /* heros secton styling */
 .heros{
-    background-image: url('https://propertylistings.co.ke/wp-content/uploads/2019/01/real-estate-photography.jpg');
+    background-image: url('https://www.jotform.com/blog/wp-content/uploads/2020/05/real-estate-photography-1191x500.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-position: center;
